--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -79,6 +79,7 @@
     "find-cache-dir": "3.3.1",
     "jest-worker": "24.9.0",
     "native-url": "0.3.4",
+    "newrelic": "^7.1.2",
     "node-fetch": "2.6.1",
     "node-html-parser": "1.4.9",
     "node-libs-browser": "^2.2.1",
@@ -158,6 +159,7 @@
     "@types/jsonwebtoken": "8.3.7",
     "@types/lodash.curry": "4.1.6",
     "@types/lru-cache": "5.1.0",
+    "@types/newrelic": "^7.0.0",
     "@types/node-fetch": "2.3.4",
     "@types/path-to-regexp": "1.7.0",
     "@types/react": "16.9.17",
