--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -92,6 +92,7 @@
     "mkdirp": "0.5.3",
     "native-url": "0.3.1",
     "neo-async": "2.6.1",
+    "newrelic": "6.9.0",
     "pnp-webpack-plugin": "1.6.4",
     "postcss": "7.0.29",
     "prop-types": "15.7.2",
