--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -93,6 +93,7 @@
     "mkdirp": "0.5.3",
     "native-url": "0.3.1",
     "neo-async": "2.6.1",
+    "newrelic": "6.9.0",
     "pnp-webpack-plugin": "1.6.4",
     "postcss": "7.0.29",
     "prop-types": "15.7.2",
@@ -142,6 +143,7 @@
     "@types/lru-cache": "5.1.0",
     "@types/mini-css-extract-plugin": "0.8.0",
     "@types/nanoid": "2.0.0",
+    "@types/newrelic": "^6.13.0",
     "@types/node-fetch": "2.3.4",
     "@types/path-to-regexp": "1.7.0",
     "@types/react": "16.9.17",
